--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "workspace-root",
   "private": true,
+  "scripts": {
+    "build": "turbo run build",
+    "lint": "turbo run lint"
+  },
   "devDependencies": {
     "@babel/preset-typescript": "^7.22.15",
     "@monorepolint/cli": "0.5.0-alpha.108",
