--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@monorepolint/rules": "0.5.0-alpha.108",
     "babel-plugin-dev-expression": "^0.2.3",
     "esbuild-plugin-babel": "^0.2.3",
+    "@babel/core": "^7.23.0",
     "eslint": "^8.49.0",
     "prettier": "^3.0.3",
     "tsc-absolute": "^1.0.1",
